# lolicon

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
scripts/: download.ps1
src/: config.rs  error.rs  fetch.rs  lib.rs  main.rs  storage.rs
utils/: local_query.py
