[package]
authors = ["poly000"]
name = "lolicon"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "#NSFW warn; example usage for lolicon_api."
repository = "https://github.com/mokurin000/lolicon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lolicon_api = { git = "https://github.com/mokurin000/lolicon_api.git", features = [
    "parse-resp",
] }
serde = "1.0"
serde_json = "1.0.128"
reqwest = { version = "0.12.7" }
url = "2.5.2"
tokio = { version = "1.40.0", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "time",
    "fs",
] }
bytes = "1.7.2"
toml = { version = "0.8.19", no-default-features = true, features = ["parse"] }
