[package]
authors = ["poly000"]
name = "lolicon"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "#NSFW warn; example usage for lolicon_api."
repository = "https://github.com/mokurin000/lolicon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.64"
strum = { version = "0.26.3", default-features = false, features = ["derive"] }
lolicon_api = { version = "1.6.5", features = ["parse-resp"] }

serde = "1.0"
serde_json = "1.0.128"
toml = { version = "0.8.19" }

url = "2.5.2"
bytes = "1.7.2"
rustc-hash = "2.0.0"

tokio = { version = "1.40.0", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "time",
    "fs",
] }
reqwest = { version = "0.12.7" }

tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
